[tool.poetry]
name = "mariner"
version = "0.3.0"
description = "Web application for controlling MSLA 3D Printers based on ChiTu controllers"
license = "MIT"
readme = "README.rst"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
  "Desterly",
  "Alejandro Mora <mail@alejandro.md>",  
]

[tool.poetry.scripts]
mariner = 'mariner.server:main'

[tool.poetry.dependencies]
flask = "2.1.1"
flask-caching = "1.10.1"
Flask-WTF = "1.0.1"
pypng = "0.0.21"
pyre-extensions = "0.0.27"
pyserial = "3.5"
python = "^3.7, !=3.9"
toml = "0.10.2"
typedstruct = "0.1.0"
waitress = "2.1.1"
whitenoise = "6.0.0"
pycryptodome = "^3.15.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
freezegun = "1.2.1"
green = "3.4.1"
pyexpect = "1.0.21"
pyfakefs = "4.5.6"
pyre-check = "0.9.10"
python-language-server = "0.36.2"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"