[tool.poetry]
name = "mariner"
version = "0.2.0"
description = "Web application for controlling MSLA 3D Printers based on ChiTu controllers"
license = "MIT"
readme = "README.rst"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
]

[tool.poetry.scripts]
mariner = 'mariner.server:main'

[tool.poetry.dependencies]
flask = "2.3.3"
flask-caching = "1.11.1"
Flask-WTF = "1.2.2"
pypng = "0.20220715.0"
pyre-extensions = "0.0.31"
pyserial = "3.5"
python = "^3.7, !=3.9"
toml = "0.10.2"
typedstruct = "0.1.0"
waitress = "2.1.2"
whitenoise = "6.7.0"

[tool.poetry.dev-dependencies]
black = "22.12.0"
flake8 = "4.0.1"
freezegun = "1.5.1"
green = "3.5.0"
pyexpect = "1.0.22"
pyfakefs = "4.7.0"
pyre-check = "0.9.22"
python-language-server = "0.36.2"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
